# youtube-to-polished-transcript

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/application/: Cargo.toml
crates/application/src/services/: mod.rs  speaker_mapping.rs  transcript_pipeline.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs
crates/domain/src/models/: audio_file.rs  manifest.rs  mod.rs  speaker.rs  transcript.rs  utterance.rs  video_source.rs
crates/domain/src/ports/: audio_extractor.rs  mod.rs  polisher.rs  transcriber.rs  transcript_repository.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  settings.rs  util.rs
crates/infra/src/adapters/: assemblyai_transcriber.rs  claude_polisher.rs  deepgram_transcriber.rs  file_transcript_repository.rs  gemini_polisher.rs  json_transcript_repository.rs  manifest_repository.rs  mod.rs  ollama_polisher.rs  openai_polisher.rs  rusty_ytdl_extractor.rs  srt_transcript_repository.rs  ytdlp_audio_extractor.rs
crates/infra/tests/: integration_assemblyai.rs  integration_claude.rs  integration_ytdlp.rs
examples/: lex_clips.txt  urls.txt
output/: index.html  jnfbxjwm7hc.md  john-carmack-doom-quake-vr-agi-programming-video-games-and-rockets-lex-fridman-p.md  manifest.json  mcp-vs-api-simplifying-ai-agent-integration-with-external-data.md  me-at-the-zoo.md  the-greatest-first-person-shooter-of-all-time-jeff-kaplan-and-lex-fridman.md  try-something-new-for-30-days-matt-cutts.md  w8aoz8rbz-e.md  why-china-is-successful-in-tech-nvidia-ceo-explains-jensen-huang-and-lex-fridman.md  will-ai-replace-programmers-lex-fridman-podcast.md  worst-video-game-quest-ever-created-world-of-warcrafts-green-hills-of-strangleth.md
