[package]
name = "yt2pt"
version.workspace = true
edition.workspace = true
description = "YouTube video to polished, speaker-attributed transcript"
repository = "https://github.com/CosmicDreamer17/youtube-to-polished-transcript"
license = "MIT"

[[bin]]
name = "yt2pt"
path = "src/main.rs"

[dependencies]
yt2pt-domain = { path = "../domain" }
yt2pt-application = { path = "../application" }
yt2pt-infra = { path = "../infra" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
