[package]
name = "yt2pt-infra"
version.workspace = true
edition.workspace = true

[dependencies]
yt2pt-domain = { path = "../domain" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "time"] }
async-trait = "0.1"
rusty_ytdl = { version = "0.7", features = ["ffmpeg"] }
chrono = "0.4"
regex = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
